stopped clipping at the top

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,4 +1,5 @@
 header {
+  margin-top: 120px;
   height: 400px;
   width: 100%;
   background-color: #8a8f00;
